envoy/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          merge_slashes: false
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              log_format:
                json_format:
                  "@timestamp": "%START_TIME%"
                  "hostname": "%HOSTNAME%"
                  "status": "%RESPONSE_CODE%"
                  "remote_addr": "%DOWNSTREAM_REMOTE_ADDRESS%"
                  "x_forwarded_for": "%REQ(X-FORWARDED-FOR)%"
                  "request_method": "%REQ(:METHOD)%"
                  "scheme": "%REQ(:SCHEME)%"
                  "host": "%REQ(:HOST)%"
                  "server_port": "%DOWNSTREAM_LOCAL_PORT%"
                  "request_uri": "%REQ(:PATH)%"
                  "is_args": "%REQ(:QUERY)%"
                  "args": "%REQ(:QUERY)%"
                  "query_string": "%REQ(:QUERY)%"
                  "server_protocol": "%PROTOCOL%"
                  "bytes_sent": "%BYTES_SENT%"
                  "request_time": "%DURATION%"
                  "proxy_host": "%UPSTREAM_HOST%"
                  "upstream_status": "%RESPONSE_CODE%"
                  "upstream_response_time": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
                  "upstream_addr": "%UPSTREAM_REMOTE_ADDRESS%"
                  "cf-ray": "%REQ(CF-RAY)%"
                  "http_user_agent": "%REQ(USER-AGENT)%"
                  "referer": "%REQ(REFERER)%"
          route_config:
            name: local_route
            virtual_hosts:
            - name: forwarded_proxy_service
              domains: ["*"]
              routes:
              # ---------------------------------------------------------
              # HTTPS 路由規則
              # ---------------------------------------------------------
              - match:
                  safe_regex:
                    google_re2: {}
                    regex: "^/https://([^/]+)(/.*)?$"
                route:
                  cluster: dynamic_forward_proxy_cluster_https
                  host_rewrite_path_regex:
                    pattern:
                      google_re2: {}
                      regex: "^/https://([^/]+)(/.*)?$"
                    substitution: "\\1"
                  regex_rewrite:
                    pattern:
                      google_re2: {}
                      regex: "^/https://([^/]+)(/.*)?$"
                    substitution: "\\2"
              # ---------------------------------------------------------
              # HTTP 路由規則
              # ---------------------------------------------------------
              - match:
                  safe_regex:
                    google_re2: {}
                    regex: "^/http://([^/]+)(/.*)?$"
                route:
                  cluster: dynamic_forward_proxy_cluster_http
                  host_rewrite_path_regex:
                    pattern:
                      google_re2: {}
                      regex: "^/http://([^/]+)(/.*)?$"
                    substitution: "\\1"
                  regex_rewrite:
                    pattern:
                      google_re2: {}
                      regex: "^/http://([^/]+)(/.*)?$"
                    substitution: "\\2"
          http_filters:
          # ---------------------------------------------------------
          # Dynamic Forward Proxy Filter
          # ---------------------------------------------------------
          - name: envoy.filters.http.dynamic_forward_proxy
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
              # 定義 DNS Cache 並設定 Anchor (&dns_cache_config)
              dns_cache_config: &dns_cache_config
                name: dynamic_forward_proxy_cache_config
                dns_lookup_family: V4_ONLY
                dns_resolution_config:
                  resolvers:
                  - socket_address:
                      address: "8.8.8.8"
                      port_value: 53
                  dns_resolver_options:
                    use_tcp_for_dns_lookups: false
                    no_default_search_domain: true
          # ---------------------------------------------------------
          # Router Filter (必須包含 typed_config)
          # ---------------------------------------------------------
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  # ---------------------------------------------------------
  # Cluster: HTTPS
  # ---------------------------------------------------------
  - name: dynamic_forward_proxy_cluster_https
    lb_policy: CLUSTER_PROVIDED
    cluster_type:
      name: envoy.clusters.dynamic_forward_proxy
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
        # 引用上方的 DNS 設定
        dns_cache_config: *dns_cache_config
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          validation_context:
            trusted_ca:
              filename: /etc/ssl/certs/ca-certificates.crt
        sni: "%UPSTREAM_HOST%"
  # ---------------------------------------------------------
  # Cluster: HTTP
  # ---------------------------------------------------------
  - name: dynamic_forward_proxy_cluster_http
    lb_policy: CLUSTER_PROVIDED
    cluster_type:
      name: envoy.clusters.dynamic_forward_proxy
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
        # 引用上方的 DNS 設定
        dns_cache_config: *dns_cache_config
